force-app/main/default/objects/Payment_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Plan</relationshipLabel>
    <relationshipName>Payment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>