force-app/main/default/objects/Payment_Plan__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>