force-app/main/default/objects/Payment_Plan__c/fields/Cost_Sheet_Master__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Sheet Master</label>
    <referenceTo>CLP_Master__c</referenceTo>
    <relationshipName>Payment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>