force-app/main/default/objects/Payment_Plan__c/fields/Custom_Plan__c.field-meta.xml
<CustomField>
    <fullName>Custom_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Plan</label>
    <type>Checkbox</type>
</CustomField>